--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
-    <title>Phasmophobia evidence table</title>
+    <title>Phasmophobia Companion</title>
   </head>
   <body class="h-full">
     <noscript>
-      <strong>We're sorry but Phasmophobia evidence table doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Phasmophobia Companion doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
   </body>
